refactor and documentation creation

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 checkpoints
 adds
-project_files
 myenv
+documentation/High-resolution Piano Transcription with Pedals by Regressing Precise Onsets and Offsets Times_v0.2.pdf
